[tracing] Add memory usage of Android UI resources to memory-infra

Add provider to track memory usage of bitmap resources in browser.

BUG=654640
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2406103002
Cr-Commit-Position: refs/heads/master@{#425232}

Former-commit-id: 49a669c8ddfd8a45ab0318798359b9b08d2d9fa8